Fixed alignment of the content panels to axis

--- a/src/timeline/component/css/panel.css
+++ b/src/timeline/component/css/panel.css
@@ -45,3 +45,7 @@
 .vis.timeline .background {
   overflow: hidden;
 }
+
+.vis.timeline .vispanel > .content {
+  position: relative;
+}
